# stakesignal

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crank/: .env.example  Procfile  config.py  market_creator.py  pda.py  pyth_resolver.py  railway.toml  requirements.txt  verify_resolver.py  yield_calculator.py
docs/: markets.md  setup.md
programs/stakesignal/: Cargo.toml
programs/stakesignal/src/: constants.rs  errors.rs  lib.rs
programs/stakesignal/src/instructions/: add_lst_mint.rs  cancel_market.rs  claim_refund.rs  claim_winnings.rs  create_market.rs  early_exit.rs  initialize_factory.rs  mod.rs  place_position.rs  resolve_market.rs
programs/stakesignal/src/state/: factory.rs  market.rs  mod.rs  position.rs  stats.rs
tests/: stakesignal.ts
web/: .env.example  package-lock.json  package.json  seed-markets.mjs  tailwind.config.ts
web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/src/app/api/faucet/: route.ts
web/src/app/leaderboard/: page.tsx
web/src/app/market/[id]/: page.tsx
web/src/app/portfolio/: page.tsx
web/src/app/signals/: page.tsx
web/src/components/: AppShell.tsx  FaucetDialog.tsx  SidebarShell.tsx  WalletButton.tsx
web/src/lib/: constants.ts  demo-data.ts  format.ts  idl.json  timeLeft.ts
