[package]
name = "stakesignal"
version = "0.1.0"
description = "Prediction markets with LST collateral"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stakesignal"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
